0-gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  parentRefs:
  - name: alb
  rules:
  - backendRefs:
    - name: argocd-server
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /
